--- a/public/style.css
+++ b/public/style.css
@@ -206,7 +206,7 @@ a.article:hover {
     object-fit: cover;
 }
 
-#activitiesCard {
+.activitiesCard {
 	width: 250px;
 	display: inline-block;
 	position: relative;
@@ -221,27 +221,10 @@ a.article:hover {
 }
 
 
-#activitiesCard h6 {
+.card-text {
 	margin: 0;
 	color: grey;
 }
-
-
-/*
-.content-wrapper {
-	width: 850px;
-	background-color: black;
-	margin: 0 auto;
-	}
-*/
-
-/*.content-wrapper .active {
-	width: 1130px;
-	background-color: yellow;
-	margin: 0 auto;
-	align-content: center;
-}*/
-
 
 /* ---------------------------------------------------
     NAV BAR
@@ -291,6 +274,7 @@ a.article:hover {
 	display: inline-block;
 	vertical-align: top;
 	margin-left: 30px;
+	width: 600px;
 }
 
 #details p {
@@ -313,10 +297,91 @@ a.article:hover {
 
 .react-icons {
 	margin-right: 15px;
-	color: black;
+	color: #17a2b8;
 }
 
 .dropdown {
 	display: inline-block;
 	margin-left: 8px;
+}
+
+#openinghours {
+	list-style-type: none;
+	margin-left: -5px;
+}
+
+.colorButton {
+	background-color: #17a2b8;
+	border-color: #17a2b8;
+}
+
+#description {
+	border-top: solid #7386D5;
+	height: 150px;
+	vertical-align: bottom;
+	padding: 20px;
+	padding-left: 35px;
+}
+
+#description p {
+	font-size: 15px;
+	vertical-align: bottom;
+}
+
+.timingDiv {
+	display: inline-block;
+}
+
+.OneB{
+	margin-left: 20px;
+}
+
+.TwoB{
+	margin-left: 20px;
+	vertical-align: top;
+}
+
+.TwoA{
+	margin-left: 40px;
+	vertical-align: top;
+}
+
+.TwoC{
+	margin-left: 153px;
+	vertical-align: top;
+}
+
+
+
+
+.btn-secondary:hover {
+    color: #fff;
+    background-color: #5a6268;
+    border-color: #545b62;
+}
+
+/* ---------------------------------------------------
+    CREATE NEW
+----------------------------------------------------- */
+
+.form-group {
+	width: 450px;
+}
+
+.test {
+	background-color: black;
+}
+
+/* ---------------------------------------------------
+    HOMEPAGE AESTHETIC
+-----------------------------------------------------  */
+
+.homePage-slider {
+	margin-top: 16px;
+	margin-left: 25px;
+}
+
+.homeDescrip {
+	position: relative;
+	right: 500px;
 }
